fixed landing carousel text alignment

--- a/src/components/Landing/LandingCarousel/styles.module.scss
+++ b/src/components/Landing/LandingCarousel/styles.module.scss
@@ -53,5 +53,6 @@
     font-size: 13px;
     letter-spacing: 3px;
     padding: 0px 15px;
+    text-align: center;
   }
 }
